// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed basic 1`] = `
.emotion-20 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  min-width: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 25%;
}

.emotion-0 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
}

<div
  className="emotion-18 emotion-19 emotion-20 emotion-21"
>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
</div>
`;

exports[`Feed empty 1`] = `
.emotion-2 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  className="emotion-0 emotion-1 emotion-2 emotion-3"
/>
`;

exports[`Feed with theme 1`] = `
.emotion-3 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  min-width: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 25%;
}

.emotion-0 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-16 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -8px;
  margin-right: -8px;
  margin-top: -8px;
  margin-bottom: -8px;
}

.emotion-16 + .emotion-15 {
  margin-top: 8px;
}

.emotion-16 > .emotion-2 > .emotion-1,
.emotion-16 > .emotion-1 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

<div
  className="emotion-14 emotion-15 emotion-16 emotion-17"
>
  <div
    className="emotion-2 emotion-3 emotion-4"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
  <div
    className="emotion-2 emotion-3 emotion-4"
  />
</div>
`;
